<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Attendance"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/attendance_DateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
       >

        <TextView
            android:id="@+id/attendance_AttendanceDateFrom"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="10"
            style="@style/spinner_style"
            android:textColor="#000"
            android:textSize="14sp"
            android:layout_margin="5dp"
            android:text="@string/from_date"
            android:gravity="center" />
        <TextView
            android:id="@+id/attendance_AttendanceDateTo"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="10"
            style="@style/spinner_style"
            android:textColor="#000"
            android:textSize="14sp"
            android:layout_margin="5dp"
            android:text="@string/to_date"

            android:gravity="center" />

        <Button
            android:id="@+id/attendance_Search"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="5"
           android:layout_margin="5dp"
            android:text="@string/ok"
            android:background="@drawable/button"


 />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/listview"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/date"/>
        <View

            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/laborsListView"
            android:background="#c2bbbb" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/in"/>

        <View

            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/laborsListView"
            android:background="#c2bbbb" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/out"/>


        <View

            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/laborsListView"
            android:background="#c2bbbb" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/holidayname"/>


    </LinearLayout>

    <ListView
        android:id="@+id/attendance_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>