<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Requests">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/requests_LeaveTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        style="@style/spinner_style"/>

    <Spinner
        android:id="@+id/requests_ReplacementSpinner"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_below="@+id/requests_LeaveTypeSpinner"
        style="@style/spinner_style"/>

    <LinearLayout
        android:id="@+id/dateLayoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/requests_ReplacementSpinner">

    <TextView
        android:id="@+id/requests_LeaveDateFrom"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="10"
        style="@style/spinner_style"
        android:textColor="#000"
        android:textSize="17sp"
        android:text="@string/from_date"
        android:gravity="center" />
    <TextView
        android:id="@+id/requests_LeaveDateTo"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="10"
        style="@style/spinner_style"
        android:textColor="#000"
        android:textSize="17sp"
        android:text="@string/to_date"
        android:enabled="false"
        android:gravity="center" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/timeLayoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/dateLayoute"
        android:visibility="gone">

        <TextView
            android:id="@+id/requests_LeaveTimeFrom"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="10"
            style="@style/spinner_style"
            android:textColor="#000"
            android:textSize="17sp"
            android:text="@string/from_time"
            android:gravity="center" />
        <TextView
            android:id="@+id/requests_LeaveTimeTo"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="10"
            style="@style/spinner_style"
            android:textColor="#000"
            android:textSize="17sp"
            android:text="@string/to_time"
            android:gravity="center" />

    </LinearLayout>

    <EditText
        android:id="@+id/requests_Note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edittext_style"
        android:hint="@string/note"
        android:layout_below="@+id/timeLayoute"/>


            <LinearLayout
                android:id="@+id/attachmentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/requests_Note"
                android:visibility="gone">

                <TextView
                    android:id="@+id/requests_attachmentName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    style="@style/edittext_style"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:text="@string/no_image"
                    android:gravity="center" />
                <Button
                    android:id="@+id/selectFile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:layout_margin="10dp"
                    android:text="@string/select"
                    android:background="@drawable/button"

                    />

            </LinearLayout>



    <Button
        android:id="@+id/requests_Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/save"
        android:background="@drawable/button"

        android:layout_below="@+id/attachmentLayout"
        />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>