<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:background="@drawable/listview"
    android:orientation="vertical">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/attendance_Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/date"/>
        <View

            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/laborsListView"
            android:background="#c2bbbb" />

    <TextView
        android:id="@+id/attendance_CheckIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/in"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/laborsListView"
            android:background="#c2bbbb" />
        <TextView
            android:id="@+id/attendance_CheckOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/out"/>


        <View

            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/laborsListView"
            android:background="#c2bbbb" />
    <TextView
        android:id="@+id/attendance_HolidayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/holidayname"/>


    </LinearLayout>

</LinearLayout>
</LinearLayout>